--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+sbt-launch-*.jar
 
 # Scala-IDE specific
 .scala_dependencies
+
+# Eclipse specific
+.classpath
+.project
+.settings
